# project-activities

./: .gitignore  CMakeLists.txt  EXPLANATION.md  Makefile  README.md  SUMMARY.md  integration-simple  main-simple.cpp
@docs/: simple-maxim.cpp  simple-nizza.cpp  task.txt
block-schemes/: block-scheme.md  main.json
include/: function.h  integration.h
src/: function.cpp  integration.cpp  main.cpp
с/: main.cpp
